{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 110,
  "lineage": "7b50e569-9045-0961-55a0-1befb6e1360b",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573752593971:security-group/sg-020fd34936169eec8",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-020fd34936169eec8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01ab48fabb63750c5"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "sock-shop-v9djxCod-cluster-2024081821481675420000000b",
            "name_prefix": "sock-shop-v9djxCod-cluster-",
            "owner_id": "573752593971",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "sock-shop-v9djxCod-cluster",
              "Project": "Sock Shop K8s Deployment"
            },
            "tags_all": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "sock-shop-v9djxCod-cluster",
              "Project": "Sock Shop K8s Deployment"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f6cedc546f7682c2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573752593971:security-group/sg-01ab48fabb63750c5",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01ab48fabb63750c5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-020fd34936169eec8"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-020fd34936169eec8"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-020fd34936169eec8"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-020fd34936169eec8"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-020fd34936169eec8"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-020fd34936169eec8"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "sock-shop-v9djxCod-node-2024081821481672590000000a",
            "name_prefix": "sock-shop-v9djxCod-node-",
            "owner_id": "573752593971",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "sock-shop-v9djxCod-node",
              "Project": "Sock Shop K8s Deployment",
              "kubernetes.io/cluster/sock-shop-v9djxCod": "owned"
            },
            "tags_all": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "sock-shop-v9djxCod-node",
              "Project": "Sock Shop K8s Deployment",
              "kubernetes.io/cluster/sock-shop-v9djxCod": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f6cedc546f7682c2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1356426609",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-020fd34936169eec8",
            "security_group_rule_id": "sgr-0e32264a0d6a9bac8",
            "self": false,
            "source_security_group_id": "sg-01ab48fabb63750c5",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-1530089147",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-01ab48fabb63750c5",
            "security_group_rule_id": "sgr-0c2bca8ce71b07ff4",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-510794300",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01ab48fabb63750c5",
            "security_group_rule_id": "sgr-0fa0da44e9daff91c",
            "self": false,
            "source_security_group_id": "sg-020fd34936169eec8",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-1800655798",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01ab48fabb63750c5",
            "security_group_rule_id": "sgr-0f0d716273049cbf1",
            "self": false,
            "source_security_group_id": "sg-020fd34936169eec8",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-2719069216",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01ab48fabb63750c5",
            "security_group_rule_id": "sgr-0784a5282fc2b45c0",
            "self": false,
            "source_security_group_id": "sg-020fd34936169eec8",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-2974648321",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01ab48fabb63750c5",
            "security_group_rule_id": "sgr-0b8d34c5c5b27a420",
            "self": false,
            "source_security_group_id": "sg-020fd34936169eec8",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-3589061578",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01ab48fabb63750c5",
            "security_group_rule_id": "sgr-0e43bfa523d2ce229",
            "self": false,
            "source_security_group_id": "sg-020fd34936169eec8",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-4091640780",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01ab48fabb63750c5",
            "security_group_rule_id": "sgr-029687b460d269ce5",
            "self": false,
            "source_security_group_id": "sg-020fd34936169eec8",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-642709143",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01ab48fabb63750c5",
            "security_group_rule_id": "sgr-045664df8f236500e",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-155005395",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01ab48fabb63750c5",
            "security_group_rule_id": "sgr-0c3b3197f546928c5",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-2908918332",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-01ab48fabb63750c5",
            "security_group_rule_id": "sgr-08ae78883bdeb4455",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573752593971:security-group/sg-010243a77040a1481",
            "description": "Security group with self ingress, specific open ports, and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-010243a77040a1481",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Access to port 31601",
                "from_port": 31601,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 31601
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Access to port 9411",
                "from_port": 9411,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9411
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Access to ports 30001",
                "from_port": 30001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30001
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Access to ports 30002",
                "from_port": 30002,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30002
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Ingress Rule",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "sock-shop-sg-2024081821481823590000000c",
            "name_prefix": "sock-shop-sg-",
            "owner_id": "573752593971",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "sock-shop-sg",
              "Project": "Sock Shop K8s Deployment"
            },
            "tags_all": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "sock-shop-sg",
              "Project": "Sock Shop K8s Deployment"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0f6cedc546f7682c2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-4114216976",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-010243a77040a1481",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_sg.aws_security_group.this",
            "module.eks_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH access",
            "from_port": 22,
            "id": "sgrule-1441895138",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-010243a77040a1481",
            "security_group_rule_id": "sgr-01e30adcacf378caa",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_sg.aws_security_group.this",
            "module.eks_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP access",
            "from_port": 80,
            "id": "sgrule-3816542039",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-010243a77040a1481",
            "security_group_rule_id": "sgr-0393f1bfb21de3ad1",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_sg.aws_security_group.this",
            "module.eks_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Access to port 9411",
            "from_port": 9411,
            "id": "sgrule-221638863",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-010243a77040a1481",
            "security_group_rule_id": "sgr-03e7644a775c3ea38",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 9411,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_sg.aws_security_group.this",
            "module.eks_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Access to ports 30001",
            "from_port": 30001,
            "id": "sgrule-4097300223",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-010243a77040a1481",
            "security_group_rule_id": "sgr-064830271691d13f7",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 30001,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_sg.aws_security_group.this",
            "module.eks_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Access to ports 30002",
            "from_port": 30002,
            "id": "sgrule-3901250255",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-010243a77040a1481",
            "security_group_rule_id": "sgr-0ccd82e684dee7e5a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 30002,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_sg.aws_security_group.this",
            "module.eks_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Access to port 31601",
            "from_port": 31601,
            "id": "sgrule-3671627715",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-010243a77040a1481",
            "security_group_rule_id": "sgr-0ff8767d8d200dd39",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 31601,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_sg.aws_security_group.this",
            "module.eks_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Ingress Rule",
            "from_port": 0,
            "id": "sgrule-2547658883",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-010243a77040a1481",
            "security_group_rule_id": "sgr-0907de6cc67c8c035",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_sg.aws_security_group.this",
            "module.eks_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573752593971:network-acl/acl-079d591aacf64a6b0",
            "default_network_acl_id": "acl-079d591aacf64a6b0",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-079d591aacf64a6b0",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "573752593971",
            "subnet_ids": [
              "subnet-01f42ab7694dbd3f7",
              "subnet-029310c251fd5f980",
              "subnet-02edb0be560d199e8",
              "subnet-051bd85c049d4cc97",
              "subnet-07f5b956f75eb658e",
              "subnet-0cb9059f2972ab0bf"
            ],
            "tags": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "sock-shop-vpc",
              "Project": "Sock Shop K8s Deployment"
            },
            "tags_all": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "sock-shop-vpc",
              "Project": "Sock Shop K8s Deployment"
            },
            "vpc_id": "vpc-0f6cedc546f7682c2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573752593971:route-table/rtb-04f88f666c6563d8b",
            "default_route_table_id": "rtb-04f88f666c6563d8b",
            "id": "rtb-04f88f666c6563d8b",
            "owner_id": "573752593971",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "sock-shop-vpc",
              "Project": "Sock Shop K8s Deployment"
            },
            "tags_all": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "sock-shop-vpc",
              "Project": "Sock Shop K8s Deployment"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0f6cedc546f7682c2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573752593971:security-group/sg-04d98f27d43675f63",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-04d98f27d43675f63",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "573752593971",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "sock-shop-vpc",
              "Project": "Sock Shop K8s Deployment"
            },
            "tags_all": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "sock-shop-vpc",
              "Project": "Sock Shop K8s Deployment"
            },
            "vpc_id": "vpc-0f6cedc546f7682c2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00a878df10783e6df",
            "arn": "arn:aws:ec2:us-east-1:573752593971:elastic-ip/eipalloc-00a878df10783e6df",
            "association_id": "eipassoc-02d57db25adead923",
            "domain": "vpc",
            "id": "eipalloc-00a878df10783e6df",
            "network_border_group": "us-east-1",
            "network_interface": "eni-034fd13374823d3b0",
            "private_dns": "ip-10-0-100-108.ec2.internal",
            "private_ip": "10.0.100.108",
            "public_dns": "ec2-100-29-105-159.compute-1.amazonaws.com",
            "public_ip": "100.29.105.159",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "sock-shop-vpc",
              "Project": "Sock Shop K8s Deployment"
            },
            "tags_all": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "sock-shop-vpc",
              "Project": "Sock Shop K8s Deployment"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573752593971:internet-gateway/igw-08dbb740661ce7c00",
            "id": "igw-08dbb740661ce7c00",
            "owner_id": "573752593971",
            "tags": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "sock-shop-vpc",
              "Project": "Sock Shop K8s Deployment"
            },
            "tags_all": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "sock-shop-vpc",
              "Project": "Sock Shop K8s Deployment"
            },
            "vpc_id": "vpc-0f6cedc546f7682c2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00a878df10783e6df",
            "association_id": "eipassoc-02d57db25adead923",
            "connectivity_type": "public",
            "id": "nat-0753be997cf9a4453",
            "network_interface_id": "eni-034fd13374823d3b0",
            "private_ip": "10.0.100.108",
            "public_ip": "100.29.105.159",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0cb9059f2972ab0bf",
            "tags": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "sock-shop-vpc",
              "Project": "Sock Shop K8s Deployment"
            },
            "tags_all": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "sock-shop-vpc",
              "Project": "Sock Shop K8s Deployment"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-021cb5e9bf77f12da1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0753be997cf9a4453",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-021cb5e9bf77f12da",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08dbb740661ce7c00",
            "id": "r-rtb-0dc6303ba1441febc1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0dc6303ba1441febc",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573752593971:route-table/rtb-021cb5e9bf77f12da",
            "id": "rtb-021cb5e9bf77f12da",
            "owner_id": "573752593971",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0753be997cf9a4453",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "sock-shop-vpc",
              "Project": "Sock Shop K8s Deployment"
            },
            "tags_all": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "sock-shop-vpc",
              "Project": "Sock Shop K8s Deployment"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f6cedc546f7682c2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573752593971:route-table/rtb-0dc6303ba1441febc",
            "id": "rtb-0dc6303ba1441febc",
            "owner_id": "573752593971",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08dbb740661ce7c00",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "sock-shop-vpc",
              "Project": "Sock Shop K8s Deployment"
            },
            "tags_all": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "sock-shop-vpc",
              "Project": "Sock Shop K8s Deployment"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f6cedc546f7682c2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bbacbf715bff0ef4",
            "route_table_id": "rtb-021cb5e9bf77f12da",
            "subnet_id": "subnet-029310c251fd5f980"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0453ed40a57a697e0",
            "route_table_id": "rtb-021cb5e9bf77f12da",
            "subnet_id": "subnet-051bd85c049d4cc97"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0228d9a0c8f5d786b",
            "route_table_id": "rtb-021cb5e9bf77f12da",
            "subnet_id": "subnet-01f42ab7694dbd3f7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c318b17dda6aad63",
            "route_table_id": "rtb-0dc6303ba1441febc",
            "subnet_id": "subnet-0cb9059f2972ab0bf"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca3241ce7a1d9df6",
            "route_table_id": "rtb-0dc6303ba1441febc",
            "subnet_id": "subnet-02edb0be560d199e8"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-016db53d76ba50a7d",
            "route_table_id": "rtb-0dc6303ba1441febc",
            "subnet_id": "subnet-07f5b956f75eb658e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573752593971:subnet/subnet-029310c251fd5f980",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-029310c251fd5f980",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "573752593971",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "sock-shop-vpc",
              "Project": "Sock Shop K8s Deployment",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "sock-shop-vpc",
              "Project": "Sock Shop K8s Deployment",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0f6cedc546f7682c2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573752593971:subnet/subnet-051bd85c049d4cc97",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-051bd85c049d4cc97",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "573752593971",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "sock-shop-vpc",
              "Project": "Sock Shop K8s Deployment",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "sock-shop-vpc",
              "Project": "Sock Shop K8s Deployment",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0f6cedc546f7682c2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573752593971:subnet/subnet-01f42ab7694dbd3f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01f42ab7694dbd3f7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "573752593971",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "sock-shop-vpc",
              "Project": "Sock Shop K8s Deployment",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "sock-shop-vpc",
              "Project": "Sock Shop K8s Deployment",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0f6cedc546f7682c2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573752593971:subnet/subnet-0cb9059f2972ab0bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb9059f2972ab0bf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "573752593971",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "sock-shop-vpc",
              "Project": "Sock Shop K8s Deployment",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "sock-shop-vpc",
              "Project": "Sock Shop K8s Deployment",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f6cedc546f7682c2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573752593971:subnet/subnet-02edb0be560d199e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02edb0be560d199e8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "573752593971",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "sock-shop-vpc",
              "Project": "Sock Shop K8s Deployment",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "sock-shop-vpc",
              "Project": "Sock Shop K8s Deployment",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f6cedc546f7682c2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573752593971:subnet/subnet-07f5b956f75eb658e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07f5b956f75eb658e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "573752593971",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "sock-shop-vpc",
              "Project": "Sock Shop K8s Deployment",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "sock-shop-vpc",
              "Project": "Sock Shop K8s Deployment",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f6cedc546f7682c2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573752593971:vpc/vpc-0f6cedc546f7682c2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-079d591aacf64a6b0",
            "default_route_table_id": "rtb-04f88f666c6563d8b",
            "default_security_group_id": "sg-04d98f27d43675f63",
            "dhcp_options_id": "dopt-05a38a13708bc56d1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f6cedc546f7682c2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04f88f666c6563d8b",
            "owner_id": "573752593971",
            "tags": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "sock-shop-vpc",
              "Project": "Sock Shop K8s Deployment"
            },
            "tags_all": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "sock-shop-vpc",
              "Project": "Sock Shop K8s Deployment"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}